--- a/liste.css
+++ b/liste.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Baloo+Bhai&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Amaranth&display=swap');
+@import url('https://fonts.googleapis.com/css?family=PT+Sans+Narrow&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Cinzel&display=swap');
 
 
 body{
@@ -70,7 +72,7 @@ li{
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-top: 86%;
+    margin-top: 70%;
     margin-left: 17%;
 }
 
@@ -228,6 +230,8 @@ table img{
 #formulairemain{
     margin-left: 20%;
     padding: 5%;
+    display: flex;
+    flex-direction: row;
 }
 
 form{
@@ -236,9 +240,64 @@ form{
     border-radius: 10px 10px 10px 10px;
     padding: 5%;
     width: 125%;
+    display: flex;
+    flex-direction: row;
+    font-family: 'PT Sans Narrow', sans-serif;
 }
 
 #formurgent{
     display: flex;
     flex-direction: column;
+}
+
+#checkbox{
+    display: flex;
+    flex-direction: row;
+    margin-right: 10%;
+}
+
+#urgentform{
+    display: flex;
+    flex-direction: column;
+}
+
+#formulairemoyenurgent{
+    display: flex;
+    flex-direction: column;
+}
+
+#formulairepasurgent{
+    display: flex;
+    flex-direction: column;
+}
+
+#ajouter{
+    border-radius: 15px 15px 15px 15px;
+}
+
+textarea{
+    margin-top: 5%;
+}
+
+#ajouterrangement{
+    margin-right: 15%;
+}
+
+#ajouterbutton{
+    border-radius: 15px 15px 15px 15px;
+    padding-left: 3%;
+    padding-right: 3%;
+    border: 2px solid black;
+    background-color: #eed9d1;
+}
+
+.gras{
+    font-weight: bold;
+}
+
+#thank{
+    width: 15%;
+    height: 15%;
+    margin-left: 10%;
+    margin-top: 20%;
 }
